# UOS-Microprocessor

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: adc.h  adc_ctrl.h  clap_sm.h  common.h  fnd.h  knob.h  lamp_sm.h  pin_setting.h  pin_settings.h  system.h  system_config.h  timer.h  utils.h
include/peripherals/: fnd.h  led.h  led8.h  moodlight.h  rgbled.h  timer.h  timer1.h  timer3.h
include/state_machines/: clap_sm.h  day_sm.h  sensor_sm.h  system_sm.h
include/utils/: math.h  watch.h
src/: adc.c  clap_sm.c  fnd.c  knob.c  lamp_sm.c  led.c  main.c  rgbled.c  system.c  system_config.c  system_sm.c  timer.c
src/peripherals/: adc.c  adc_ctrl.c  fnd.c  knob.c  led.c  led8.c  moodlight.c  rgbled.c  timer.c  timer1.c  timer3.c
src/state_machines/: clap_sm.c  day_sm.c  lamp_sm.c  sensor_sm.c  system_sm.c
src/utils/: watch.c
